{
  "version": 4,
  "terraform_version": "0.15.0",
  "serial": 33,
  "lineage": "3a10d657-2465-c2cc-a4e6-72d9c3f59b35",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "vpc_default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:security-group/sg-0165419f7a83df512",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0165419f7a83df512",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e5f5c0e022cefb9c",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-161-223.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.161.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:internet-gateway/igw-0c2928567e7f6c80b",
            "id": "igw-0c2928567e7f6c80b",
            "owner_id": "581650232067",
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e5f5c0e022cefb9c",
            "id": "nat-0176a7899f244dfeb",
            "network_interface_id": "eni-0373836649e3adc2d",
            "private_ip": "10.0.10.118",
            "public_ip": "3.141.161.223",
            "subnet_id": "subnet-0d7ba8f1588538aa7"
          },
          "dependencies": [
            "aws_eip.gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c2928567e7f6c80b",
            "id": "r-rtb-05228e1170f7ab4ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05228e1170f7ab4ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.igw_route_table",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03223e4be12ed89911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0176a7899f244dfeb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03223e4be12ed8991",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.nat_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:route-table/rtb-05228e1170f7ab4ec",
            "id": "rtb-05228e1170f7ab4ec",
            "owner_id": "581650232067",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:route-table/rtb-03223e4be12ed8991",
            "id": "rtb-03223e4be12ed8991",
            "owner_id": "581650232067",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0974e14dbb5f7c1",
            "route_table_id": "rtb-03223e4be12ed8991",
            "subnet_id": "subnet-006bf4b93ceefec41"
          },
          "dependencies": [
            "aws_route_table.nat_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4b116448d77ee0d",
            "route_table_id": "rtb-03223e4be12ed8991",
            "subnet_id": "subnet-0ebd3aae560b5d413"
          },
          "dependencies": [
            "aws_route_table.nat_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9a9e6afbcedfd23",
            "route_table_id": "rtb-03223e4be12ed8991",
            "subnet_id": "subnet-03406a28a8a34293b"
          },
          "dependencies": [
            "aws_route_table.nat_route_table",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0650f0de92512fb9c",
            "route_table_id": "rtb-05228e1170f7ab4ec",
            "subnet_id": "subnet-0d7ba8f1588538aa7"
          },
          "dependencies": [
            "aws_route_table.igw_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005f7c0612f6a72f9",
            "route_table_id": "rtb-05228e1170f7ab4ec",
            "subnet_id": "subnet-0cece5bd6dbf3e810"
          },
          "dependencies": [
            "aws_route_table.igw_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03819e634be3c52d6",
            "route_table_id": "rtb-05228e1170f7ab4ec",
            "subnet_id": "subnet-07bf92b05d5b580ed"
          },
          "dependencies": [
            "aws_route_table.igw_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-006bf4b93ceefec41",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-006bf4b93ceefec41",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "private-us-east-2a"
            },
            "tags_all": {
              "Name": "private-us-east-2a"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-0ebd3aae560b5d413",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-0ebd3aae560b5d413",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "private-us-east-2b"
            },
            "tags_all": {
              "Name": "private-us-east-2b"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-03406a28a8a34293b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.33.0/24",
            "id": "subnet-03406a28a8a34293b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "private-us-east-2c"
            },
            "tags_all": {
              "Name": "private-us-east-2c"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-0d7ba8f1588538aa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0d7ba8f1588538aa7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "public-us-east-2a"
            },
            "tags_all": {
              "Name": "public-us-east-2a"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-0cece5bd6dbf3e810",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-0cece5bd6dbf3e810",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "public-us-east-2b"
            },
            "tags_all": {
              "Name": "public-us-east-2b"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:subnet/subnet-07bf92b05d5b580ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-07bf92b05d5b580ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "581650232067",
            "tags": {
              "Name": "public-us-east-2c"
            },
            "tags_all": {
              "Name": "public-us-east-2c"
            },
            "vpc_id": "vpc-0e8f7f952e87e994c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:581650232067:vpc/vpc-0e8f7f952e87e994c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0feb38d4a0f4cc745",
            "default_route_table_id": "rtb-0a0da3e9811b1fc73",
            "default_security_group_id": "sg-0165419f7a83df512",
            "dhcp_options_id": "dopt-26f43e4d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e8f7f952e87e994c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a0da3e9811b1fc73",
            "owner_id": "581650232067",
            "tags": {
              "Name": "vpc-terraform"
            },
            "tags_all": {
              "Name": "vpc-terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}